--- a/CafeMenu/style.css
+++ b/CafeMenu/style.css
@@ -1,3 +1,41 @@
+body {
+    background-color: burlywood;
+}
+
 h1, h2, p {
     text-align: center;
+}
+
+div {
+    width: 80%;
+    background-color: burlywood;
+    margin-left: auto;
+    margin-right: auto;
+}
+.menu {
+
+}
+
+.established {
+
+}
+
+.item {
+
+}
+
+.flavor, .dessert {
+
+}
+
+.price {
+
+}
+
+.bottom-line {
+
+}
+
+.address{
+
 }
