--- a/CafeMenu/style.css
+++ b/CafeMenu/style.css
@@ -1,41 +1,54 @@
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+    font-family: sans-serif;
 }
 
 h1, h2, p {
     text-align: center;
 }
 
-div {
+h1, h2 {
+    font-family: Impact, serif;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+.menu {
     width: 80%;
+    max-width: 500px;
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
-}
-.menu {
-
+    padding: 20px;
 }
 
 .established {
-
+    font-style: italic;
 }
 
-.item {
-
+.item p{
+    display: inline-block;
 }
 
 .flavor, .dessert {
-
-}
+    text-align: left;
+    width: 90%;
 
 .price {
-
+    text-align: right;
+    width: 10%;
 }
 
 .bottom-line {
 
 }
 
-.address{
+.address {
 
 }
