--- a/CafeMenu/style.css
+++ b/CafeMenu/style.css
@@ -1,6 +1,7 @@
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: sans-serif;
+    padding: 20px;
 }
 
 h1, h2, p {
@@ -13,10 +14,25 @@ h1, h2 {
 
 h1 {
     font-size: 40px;
+    margin-top: 0px;
+    margin-bottom: 15px;
 }
 
 h2 {
     font-size: 30px;
+}
+
+hr {
+    height: 2px;
+    background-color: brown;
+    border-color: brown;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -25px;
 }
 
 .menu {
@@ -34,21 +50,47 @@ h2 {
 
 .item p{
     display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 18px;
 }
 
 .flavor, .dessert {
     text-align: left;
-    width: 90%;
+    width: 75%;
+}
 
 .price {
     text-align: right;
-    width: 10%;
+    width: 25%;
 }
 
 .bottom-line {
+    margin-top: 25px;
+}
 
+/*FOOTER*/
+
+footer {
+    font-size: 14px;
+}
+
+a {
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: brown;
+}
+
+a:active {
+    color: brown;
 }
 
 .address {
-
+    margin-bottom: 5px;
 }
