--- a/CssColorMarkers/style.css
+++ b/CssColorMarkers/style.css
@@ -3,7 +3,7 @@ h1 {
 }
 
 .container {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     padding: 10px 0px;
 }
 
@@ -14,13 +14,13 @@ h1 {
 }
 
 .red {
-    background-color: #FF0000;
+    background: #FF0000;
 }
 
 .green {
-    background-color: #00FF00;
+    background: #007F00;
 }
 
 .blue {
-    background-color: #0000FF;
+    background: #0000FF;
 }
