--- a/CssColorMarkers/style.css
+++ b/CssColorMarkers/style.css
@@ -14,13 +14,30 @@ h1 {
 }
 
 .red {
-    background: #FF0000;
+    background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+    box-shadow: 0 0 20px 0 rgba(83, 14, 14, 0.8);
 }
 
 .green {
-    background: #007F00;
+    background: linear-gradient();
 }
 
 .blue {
-    background: #0000FF;
+    background: linear-gradient(hsl(), hsl(), hsl());
+}
+
+.sleeve {
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 110px;
+    height: 25px;
+    border-left: 10px double rgba(0, 0, 0, 0.75);
+}
+
+.cap {
+    width: 60px;
+    height: 25px;
+}
+
+.cap, .sleeve {
+    display: inline-block;
 }
