--- a/CssColorMarkers/style.css
+++ b/CssColorMarkers/style.css
@@ -19,7 +19,8 @@ h1 {
 }
 
 .green {
-    background: linear-gradient();
+    background: linear-gradient(#55680D, #71F53E, #116C31);
+    box-shadow: 0 0 20PX 0 #3B7E20CC;
 }
 
 .blue {
