--- a/CssColorMarkers/style.css
+++ b/CssColorMarkers/style.css
@@ -24,7 +24,8 @@ h1 {
 }
 
 .blue {
-    background: linear-gradient(hsl(), hsl(), hsl());
+    background: linear-gradient(hsl(182, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+    box-shadow: 0 0 20px 0 hsla(223, 59%, 31%, 0.8);
 }
 
 .sleeve {
