--- a/RothkoPainting/styles.css
+++ b/RothkoPainting/styles.css
@@ -22,3 +22,17 @@
     border-radius: 9px;
     transform: rotate(-0.6deg);
 }
+
+.two {
+    background-color: #8f0401;
+    width: 475px;
+    height: 200px;
+    margin: 0 auto 20px;
+    box-shadow: 0 0 3px 3px #8f0401;
+    border-radius: 8px 10px;
+    transform: rotate(0.4deg);
+}
+
+.one, .two {
+    filter: blur(1px);
+}
