--- a/RothkoPainting/styles.css
+++ b/RothkoPainting/styles.css
@@ -36,3 +36,14 @@
 .one, .two {
     filter: blur(1px);
 }
+
+.three{
+    background-color: #b20403;
+    width: 91%;
+    height: 28%;
+    margin: auto;
+    box-shadow: 0 0 5px 5px #b20403;
+    border-radius: 30px 25px 60px 12px;
+    filter: blur(2px);
+    transform: rotate(-0.2deg);
+}
