--- a/NutritionFacts/styles.css
+++ b/NutritionFacts/styles.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 html{
     font-size: 16px;
 }
@@ -6,9 +10,28 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
+h1 {
+    text-align: center;
+    margin: -4px 0;
+    letter-spacing: 0.15px;
+}
+
+p {
+    margin: 0;
+}
+
 .label{
     width: 270px;
     border: 2px solid black;
     margin: 20px auto;
     padding: 0 7px;
+}
+
+.divider {
+    border-bottom: 1px solid #888989;
+    margin: 2px 0;
+}
+
+.bold {
+    font-weight: 800;
 }
