--- a/NutritionFacts/styles.css
+++ b/NutritionFacts/styles.css
@@ -61,6 +61,14 @@ p {
     height: 5px;
 }
 
+.right {
+    justify-content: flex-end;
+}
+
+.indent {
+    margin-left: 1em;
+}
+
 .calories-info h2 {
     margin: 0;
 }
@@ -75,4 +83,8 @@ p {
     margin: -7px -2px;
     font-size: 2.4em;
     font-weight: 700;
+}
+
+.daily-value p:not(.no-divider){
+    border-bottom: 1px solid #888989;
 }
