--- a/NutritionFacts/styles.css
+++ b/NutritionFacts/styles.css
@@ -73,6 +73,13 @@ p {
     margin-left: 2em;
 }
 
+.note {
+    font-size: 0.6rem;
+    margin: 5px 0;
+    padding: 0 8px;
+    text-indent: -8px;
+}
+
 .calories-info h2 {
     margin: 0;
 }
