--- a/AccessibilityQuiz/styles.css
+++ b/AccessibilityQuiz/styles.css
@@ -17,11 +17,31 @@ h1 {
     font-size: min(5vw, 1.2em);
 }
 
+h1, h2 {
+    font-family: Verdana, sans-serif;
+}
+
+h2 {
+    border-bottom: 4px solid #dfdfe2;
+}
+
 #logo {
     width: max(100px, 18vw);
     background-color: #0a0a23;
     aspect-ratio: 35/4;
     padding: 0.4rem;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
 
 nav > ul {
