--- a/AccessibilityQuiz/styles.css
+++ b/AccessibilityQuiz/styles.css
@@ -18,11 +18,22 @@ h1 {
 }
 
 h1, h2 {
-    font-family: Verdana, sans-serif;
+    font-family: Verdana, Tahoma;
 }
 
 h2 {
     border-bottom: 4px solid #dfdfe2;
+}
+
+nav {
+    width: 50%;
+    max-width: 300px;
+    height: 50px;
+}
+
+nav > ul {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 #logo {
@@ -44,7 +55,6 @@ h2 {
     border: 0;
 }
 
-nav > ul {
-    display: flex;
-    justify-content: space-evenly;
+p:before {
+    content: "Question #"
 }
