--- a/CatPainting/styles.css
+++ b/CatPainting/styles.css
@@ -19,3 +19,55 @@ body {
     bottom: 0;
     margin: auto;
   }
+
+  .cat-left-ear {
+    position: absolute;
+    top: -26px;
+    left: -31px;
+    border-top-left-radius: 90px;
+    border-top-right-radius: 10px;
+    border-bottom: 70px solid #5e5e5e;
+    transform: rotate(-45deg);
+    border-left: 35px solid transparent;
+    border-right: 35px solid transparent;
+    z-index: 1;
+  }
+
+  .cat-right-ear {
+    border-left: 35px solid transparent;
+    border-right: 35px solid transparent;
+    border-bottom: 70px solid #5e5e5e;
+    position: absolute;
+    top: -26px;
+    left: 163px;
+    transform: rotate(45deg);
+    border-top-right-radius: 10px;
+    border-top-left-radius: 90px;
+    z-index: 1;
+  }
+
+  .cat-left-inner-ear {
+    position: absolute;
+    top: 22px;
+    left: -20px;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 40px solid #3b3b4f;
+    border-bottom-right-radius: 40%;
+    border-bottom-left-radius: 40%;
+    border-top-left-radius: 90px;
+    border-top-right-radius: 10px;
+  }
+
+  .cat-right-inner-ear{
+    position: absolute;
+    top: 22px;
+    left: -20px;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 40px solid #3b3b4f;
+    border-bottom-right-radius: 40%;
+    border-bottom-left-radius: 40%;
+    border-top-left-radius: 90px;
+    border-top-right-radius: 10px;
+  }
