--- a/CatPainting/styles.css
+++ b/CatPainting/styles.css
@@ -71,3 +71,47 @@ body {
     border-top-left-radius: 90px;
     border-top-right-radius: 10px;
   }
+
+  .cat-left-eye{
+    position: absolute;
+    top: 54px;
+    left: 39px;
+    width: 30px;
+    height:40px;
+    background-color: #000;
+    border-radius: 60%;
+    transform: rotate(25deg);
+  }
+
+  .cat-right-eye{
+    position: absolute;
+    top: 54px;
+    left: 134px;
+    width: 30px;
+    height: 40px;
+    background-color: #000;
+    border-radius: 60%;
+    transform: rotate(-25deg);
+  }
+
+  .cat-left-inner-eye{
+    position: absolute;
+    top: 8px;
+    left: 2px;
+    border-radius: 60%;
+    transform: rotate(10deg);
+    width: 10px;
+    height: 20px;
+    background-color: #fff;
+  }
+
+  .cat-right-inner-eye {
+    position: absolute;
+    top: 8px;
+    left: 18px;
+    border-radius: 60%;
+    transform: rotate(-5deg);
+    width: 10px;
+    height: 20px;
+    background-color: #fff;
+  }
