--- a/Magazine/styles.css
+++ b/Magazine/styles.css
@@ -33,6 +33,11 @@ main {
     row-gap: 3rem;
 }
 
+img {
+    width: 100%;
+    object-fit: cover;
+}
+
 .heading {
     grid-column: 2 / 3;
     display: grid;
@@ -49,3 +54,27 @@ main {
     position: relative;
 }
 
+.hero-title {
+    text-align: center;
+    color: orangered;
+    font-size: 8rem;
+}
+
+.hero-subtitle {
+    font-size: 2.4rem;
+    color: orangered;
+    text-align: center;
+}
+
+.author {
+    font-size: 2rem;
+    font-family: Raleway, sans-serif;
+}
+
+.author-name a:hover {
+    background-color: #306203;
+}
+
+.publish-date {
+    color: rgba(255, 255, 255, 0.5);
+}
